--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="str_calculator">Calculator</string>
     <string name="str_currency">Currency</string>
     <string name="str_period">.</string>
+    <string name="str_flag_con">flag icon</string>
+    <string name="str_btn_convert">Convert</string>
+    <string name="str_sign_up">Sign Up</string>
 
 
 </resources>
