--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">Currency Converter</string>
+    <string name="app_name">xchange</string>
     <string name="str_calculator">Calculator</string>
     <string name="str_currency">Currency</string>
     <string name="str_period">.</string>
