--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="str_flag_con">flag icon</string>
     <string name="str_btn_convert">Convert</string>
     <string name="str_sign_up">Sign Up</string>
+    <string name="_0_0">0.0</string>
 
 
 </resources>
