--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="str_sign_up">Sign Up</string>
     <string name="_0_0">0.0</string>
     <string name="exchange_title">Exchange</string>
+    <string name="currencies">Currencies</string>
 
 
 </resources>
