ExchangeView swap imageView for TextView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="exchange_title">Exchange</string>
     <string name="currencies">Currencies</string>
 
+    <string name="LEK" translatable="false">\u20AC</string>
+
 
 </resources>
