complete implementation ConvertViewModel.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search_currency_hint">Search</string>
     <string name="pref_version_key">version</string>
+    <string name="internet_required">Internet required</string>
 
 
 </resources>
