--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="search_currency_hint">Search</string>
     <string name="pref_version_key">version</string>
     <string name="internet_required">Internet required</string>
+    <string name="FROM_CODE">from_code_key</string>
+    <string name="TO_CODE_KEY">to_code_key</string>
 
 
 </resources>
