--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,7 +38,7 @@
 
     <!-- Sync Preferences -->
     <string name="pref_theme_title">Theme</string>
-    <string name="theme_key">theme_key</string>
+    <string name="theme_key" translatable="false">theme_key</string>
     <string name="api_key_pref">API_KEY</string>
     <string name="api_title_pref">Your API key</string>
     <string name="api_category_title_pref">API</string>
@@ -46,6 +46,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="HAS_API_KEY">io.audioshinigami.currencyconverter.utils.API_KEY</string>
     <string name="search_currency_hint">Search</string>
     <string name="pref_version_key">version</string>
     <string name="internet_required">Internet required</string>
