--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,18 @@
   ~ SOFTWARE.
   -->
 
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+<!--    Preference keys-->
+    <string name="preference_has_api_key" >
+        <xliff:g id="preference" >preference_has_key</xliff:g>
+    </string>
+    <string name="preference_api_key" >
+        <xliff:g id="preference" >preference_api_key</xliff:g>
+    </string>
+    <string name="preference_theme_key" >
+        <xliff:g id="preference" >preference_theme_key</xliff:g>
+    </string>
 
     <string name="app_name" translatable="false">xchange</string>
     <string name="str_calculator">Calculator</string>
@@ -35,17 +46,12 @@
     <string name="exchange_title">Exchange</string>
     <string name="home_title">Home</string>
 
-
     <!-- Sync Preferences -->
     <string name="pref_theme_title">Theme</string>
-    <string name="theme_key" translatable="false">theme_key</string>
-    <string name="api_key_pref">API_KEY</string>
     <string name="api_title_pref">Your API key</string>
     <string name="api_category_title_pref">API</string>
     <string name="select_theme_pref">Select Theme</string>
 
-    <string name="HAS_API_KEY" translatable="false">io.audioshinigami.currencyconverter.utils.HAS_API_KEY</string>
-    <string name="API_KEY" translatable="false">io.audioshinigami.currencyconverter.utils.API_KEY</string>
     <string name="search_currency_hint">Search</string>
     <string name="pref_version_key">version</string>
     <string name="internet_required">Internet required</string>
@@ -57,6 +63,5 @@
     <string name="get_api_key_url">http://free.currencyconverterapi.com/free-api-key</string>
     <string name="get_api_message">This Application requires an API key from free.currencyconverterapi.com. \nYou can register for one below and yes it is free</string>
     <string name="get_your_api">get your API</string>
-
 
 </resources>
